--- a/client/sass/_SnackBar.sass
+++ b/client/sass/_SnackBar.sass
@@ -32,4 +32,4 @@
   visibility: visible
 
 .snackbar-container--hidden
-  visibility: hidden
+  display: none
