--- a/client/sass/_variables.sass
+++ b/client/sass/_variables.sass
@@ -4,6 +4,7 @@ $grey200: #eee
 $grey300: #e0e0e0
 $grey400: #bdbdbd
 $grey500: #9e9e9e
+$grey600: #757575
 $grey700: #616161
 $grey800: #424242
 $grey900: #212121
@@ -30,3 +31,10 @@ $width-large: 1180px
 =respond-to($width)
   @media (max-width: #{$width})
     @content
+
+=icon-color($color)
+  svg
+    fill: $color
+
+  span
+    color: $color
