--- a/client/themes/_Grey.sass
+++ b/client/themes/_Grey.sass
@@ -48,5 +48,11 @@ body
 
 
 // Footer icons
-footer > a > svg
-  fill: $grey200
+footer a
+  +icon-color($grey200)
+
+.octocat:hover
+  +icon-color($grey500)
+
+.emoji-reference:hover
+  +icon-color($grey500)
