--- a/client/themes/_PearlWhite.sass
+++ b/client/themes/_PearlWhite.sass
@@ -48,5 +48,11 @@ body
 
 
 // Footer icons
-footer > a > svg
-  fill: $grey900
+footer a
+  +icon-color($grey900)
+
+.octocat:hover
+  +icon-color($grey600)
+
+.emoji-reference:hover
+  +icon-color($grey600)
